# scenario_api/app/controllers/api/v1/packages_controller.rb
@@ -2,4 +2,19 @@
 
 # Packages Controller
 class Api::V1::PackagesController < ApplicationController
+  def index
+    render json: packages, status: :ok
+  end
+
+  private
+
+  def packages
+    packages = Api::V1::PackageService.all_packages
+    options = {}
+    options[:includes] = [:package_categories]
+    ActiveModelSerializers::SerializableResource
+        .new(packages,
+             each_serializer: Api::V1::PackageSerializer,
+             include: :package_categories ).as_json
+  end
 end
